--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -12,7 +12,7 @@
   --bg-color-transparent: #00163f80;
   --font-color: #ffffff;
   --btn-bg-color: #ffffff;
-  --accent-color: #862766;
+  --accent-color: #d34ba5;
   --header-shadow: var(--accent-color) 0px 0px 5px;
   --card-shadow: var(--accent-color) 0px 0px 20px;
 }
